force-app/main/default/objects/Sales_Motion_Page_Section__c/Sales_Motion_Page_Section__c.object-meta.xml
<CustomObject>
    <label>Sales Motion Page Section</label>
    <nameField>
        <label>Section Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Motion Page Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>