force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APJ Commercial</fullName>
            </value>
            <value>
                <fullName>Channel Commercial</fullName>
            </value>
            <value>
                <fullName>EMEA Commercial</fullName>
            </value>
            <value>
                <fullName>Global Commercial</fullName>
            </value>
            <value>
                <fullName>LA Commercial</fullName>
            </value>
            <value>
                <fullName>LARGE ENTERPRISE</fullName>
            </value>
            <value>
                <fullName>NA Commercial</fullName>
            </value>
            <value>
                <fullName>PUBLIC</fullName>
            </value>
            <value>
                <fullName>SMALL MEDIUM BUSINESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>