force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Business_Unit_List__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_List__c</fullName>
    <label>Business Unit List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>