force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Configure_Country__c.field-meta.xml
<CustomField>
    <fullName>Configure_Country__c</fullName>
    <formula>HYPERLINK(&apos;/apex/SalesMotionCountryConfig?Id=&apos;&amp;Id &amp; &apos;&amp;page=country&apos;, IMAGE(&quot;resource/1329132263000/ConfigureCountry&quot;, &apos;ConfigureCountry&apos;),&apos;_parent&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Country</label>
    <type>Text</type>
</CustomField>