force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Configure_Language__c.field-meta.xml
<CustomField>
    <fullName>Configure_Language__c</fullName>
    <formula>HYPERLINK(&apos;/apex/SalesMotionCountryConfig?Id=&apos;&amp;Id &amp; &apos;&amp;page=language&apos;,  IMAGE(&quot;resource/1364651176000/ConfigureLanguage&quot;, &apos;ConfigureLanguage&apos;),&apos;_parent&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Language</label>
    <type>Text</type>
</CustomField>