force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Configure_Region__c.field-meta.xml
<CustomField>
    <fullName>Configure_Region__c</fullName>
    <formula>HYPERLINK(&apos;/apex/SalesMotionCountryConfig?Id=&apos;&amp;Id &amp;&apos;&amp;page=region&apos;, IMAGE(&quot;resource/1364651221000/ConfigureRegion&quot;, &apos;ConfigureRegion&apos;),&apos;_parent&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Region</label>
    <type>Text</type>
</CustomField>