force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Country_List__c.field-meta.xml
<CustomField>
    <fullName>Country_List__c</fullName>
    <label>Country List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>