force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <formula>TEXT(Sales_Motion_Page__r.Sales_Motion_Name__r.Domain__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>