force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Language_List__c.field-meta.xml
<CustomField>
    <fullName>Language_List__c</fullName>
    <label>Language List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>