force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Region_List__c.field-meta.xml
<CustomField>
    <fullName>Region_List__c</fullName>
    <label>Region List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>