force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Sales_Motion_Country__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Motion Country</label>
    <referenceTo>Sales_Motion_Country__c</referenceTo>
    <relationshipLabel>Sales Motion Page Sections</relationshipLabel>
    <relationshipName>Sales_Motion_Page_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>