force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Sales_Motion_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion_Name__c</fullName>
    <formula>Sales_Motion_Page__r.Sales_Motion_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Motion Name</label>
    <type>Text</type>
</CustomField>