force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/SalesEdge_Category__c.field-meta.xml
<CustomField>
    <fullName>SalesEdge_Category__c</fullName>
    <description>SalesEdge Section Category</description>
    <label>SalesEdge Section Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>