force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/SalesMotionUniqueID__c.field-meta.xml
<CustomField>
    <fullName>SalesMotionUniqueID__c</fullName>
    <formula>Sales_Motion_Page__r.Sales_Motion_Name__r.SalesMotionUniqueId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesMotionUniqueID</label>
    <type>Text</type>
</CustomField>