force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Section_Content__c.field-meta.xml
<CustomField>
    <fullName>Section_Content__c</fullName>
    <label>Section Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>