force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/SectionContentLong__c.field-meta.xml
<CustomField>
    <fullName>SectionContentLong__c</fullName>
    <label>SectionContentLong</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>