force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Side_Bar__c.field-meta.xml
<CustomField>
    <fullName>Side_Bar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Side Bar</label>
    <type>Checkbox</type>
</CustomField>