force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepare - 0%</fullName>
            </value>
            <value>
                <fullName>Plan - 1%</fullName>
            </value>
            <value>
                <fullName>Discover - 10%</fullName>
            </value>
            <value>
                <fullName>Qualify - 30%</fullName>
            </value>
            <value>
                <fullName>Propose - 60%</fullName>
            </value>
            <value>
                <fullName>Commit - 90%</fullName>
            </value>
            <value>
                <fullName>Win - 100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>