force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Support_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Request_Type__c</fullName>
    <label>Support Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request Contracts Support</fullName>
            </value>
            <value>
                <fullName>Request Custom Service Support</fullName>
            </value>
            <value>
                <fullName>Request Global Business Ops PM Support</fullName>
            </value>
            <value>
                <fullName>Request Pre-Sales Prod Tech Support</fullName>
            </value>
            <value>
                <fullName>Request Pre-Sales Prod Tech Support - IM</fullName>
            </value>
            <value>
                <fullName>Request Pre-Sales Prod Tech Support - SE</fullName>
            </value>
            <value>
                <fullName>Request Proposal Support</fullName>
            </value>
            <value>
                <fullName>Specialist Support Request</fullName>
            </value>
            <value>
                <fullName>SOC Support Request</fullName>
            </value>
            <value>
                <fullName>PG Custom SE Support Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>