force-app/main/default/objects/Sales_Motion_Page_Section__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Static Content</fullName>
            </value>
            <value>
                <fullName>SalesEdge Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>