force-app/main/default/objects/Sales_Motion_Page_Section__c/recordTypes/SalesEdge_Content.recordType-meta.xml
<RecordType>
    <fullName>SalesEdge_Content</fullName>
    <active>true</active>
    <description>Record Type for documents retrieved from SalesEdge</description>
    <label>SalesEdge Content</label>
</RecordType>