force-app/main/default/objects/Sales_Motion_Page_Section__c/recordTypes/Static_Content.recordType-meta.xml
<RecordType>
    <fullName>Static_Content</fullName>
    <active>true</active>
    <description>Record Type for static content managed by business admin</description>
    <label>Static Content</label>
</RecordType>