force-app/main/default/objects/Sales_Motion_Page_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Motion_Name__c</columns>
    <columns>Section_Content__c</columns>
    <columns>Stage__c</columns>
    <columns>Support_Request_Type__c</columns>
    <columns>Domain__c</columns>
    <columns>Solution_Type__c</columns>
    <columns>Solution_Name__c</columns>
    <columns>SalesMotionUniqueID__c</columns>
    <columns>Country_List__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>