force-app/main/default/objects/Sales_Motion_Page_Section__c/listViews/SalesEdge.listView-meta.xml
<ListView>
    <fullName>SalesEdge</fullName>
    <columns>NAME</columns>
    <columns>Domain__c</columns>
    <columns>Solution_Type__c</columns>
    <columns>Solution_Name__c</columns>
    <columns>SalesMotionUniqueID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Motion_Page_Section__c.SalesEdge_Content</value>
    </filters>
    <label>SalesEdge</label>
    <language>en_US</language>
</ListView>